# elrond-contract-features-testing

./: README.md
events-tester/: Cargo.toml
events-tester/interaction/: tester-snippets.sh
events-tester/interaction/result/: deploy-delegation-mock-devnet.interaction.json  deploy-tester-devnet.interaction.json
events-tester/interaction/wallets/: deployer.pem  user1.pem
events-tester/meta/: Cargo.toml
events-tester/meta/src/: main.rs
events-tester/src/: events.rs  proxys.rs  tester.rs
events-tester/wasm/: Cargo.toml
events-tester/wasm/src/: lib.rs
mocks/delegation-mock/: Cargo.toml
mocks/delegation-mock/meta/: Cargo.toml
mocks/delegation-mock/src/: lib.rs
mocks/delegation-mock/wasm/: Cargo.toml
mocks/delegation-mock/wasm/src/: lib.rs
