[package]
name = "delegation-mock-wasm"
version = "0.0.1"
authors = ["CleiK"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.delegation-mock]
path = ".."


[dependencies.elrond-wasm-node]
version = "0.30.0"

[dependencies.elrond-wasm-output]
version = "0.30.0"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
